--- a/pharmaccess.bib
+++ b/pharmaccess.bib
@@ -2625,9 +2625,10 @@
   file = {/Users/dkapitan/Zotero/storage/ISG2JQDW/Kossi et al. - 2013 - Developing decentralised health information systems in developing countries –cases from Sierra Leone.pdf}
 }
 
-@article{kelleydigitala,
+@misc{kelley2020digital,
   title = {Digital {{Health Platform Handbook}}: {{Building}} a {{Digital Information Infrastructure}} ({{Infostructure}}) for {{Health}}},
   author = {Kelley, Edward and Zandi, Diana and Krishnamurthy, Ramesh and Mehl, Garrett and Novillo, David and Muneene, Derrick and Nour, Mohamed and Taliesin, Brian and Leitner, Carl and Althauser, Caren and Schaefer, Merrick and Ganesh, Jai and Marcelo, Alvin and Ramkumar, P S and Vota, Wayan and Kumar, Manish and Joshi, Surabhi and Shehadeh, Melissa Harper and Nueno, Violeta P{\'e}rez and Pye, Evan and Shokralla, Mariam},
+  year = {2020},
   langid = {english},
   file = {/Users/dkapitan/Zotero/storage/7FD9XT6F/Kelley et al. - Digital Health Platform Handbook Building a Digital Information Infrastructure (Infostructure) for.pdf}
 }
@@ -2720,24 +2721,6 @@
   langid = {english},
   keywords = {Digital health,Health policy,Health system,Intervention,low and middle income countries,mHealth,Programme sustainability},
   file = {/Users/dkapitan/Zotero/storage/2HIHHKTW/Labrique et al. - 2018 - Best practices in scaling digital health in low and middle income countries.pdf}
-}
-
-@article{till2023digital,
-  title = {Digital {{Health Technologies}} for {{Maternal}} and {{Child Health}} in {{Africa}} and {{Other Low-}} and {{Middle-Income Countries}}: {{Cross-disciplinary Scoping Review With Stakeholder Consultation}}},
-  shorttitle = {Digital {{Health Technologies}} for {{Maternal}} and {{Child Health}} in {{Africa}} and {{Other Low-}} and {{Middle-Income Countries}}},
-  author = {Till, Sarina and Mkhize, Mirriam and Farao, Jaydon and Shandu, Londiwe Deborah and Muthelo, Livhuwani and Coleman, Toshka Lauren and Mbombi, Masenyani and Bopape, Mamara and Klingberg, Sonja and van Heerden, Alastair and Mothiba, Tebogo and Densmore, Melissa and Dias, Nervo Xavier Verdezoto and Network, CoMaCH},
-  year = {2023},
-  month = apr,
-  journal = {Journal of Medical Internet Research},
-  volume = {25},
-  number = {1},
-  pages = {e42161},
-  publisher = {JMIR Publications Inc., Toronto, Canada},
-  doi = {10.2196/42161},
-  urldate = {2024-08-12},
-  abstract = {Background: Maternal and child health (MCH) is a global health concern, especially impacting low- and middle-income countries (LMIC). Digital health technologies are creating opportunities to address the social determinants of MCH by facilitating access to information and providing other forms of support throughout the maternity journey. Previous reviews in different disciplines have synthesized digital health intervention outcomes in LMIC. However, contributions in this space are scattered across publications in different disciplines and lack coherence in what digital MCH means across fields. Objective: This cross-disciplinary scoping review synthesized the existing published literature in 3 major disciplines on the use of digital health interventions for MCH in LMIC, with a particular focus on sub-Saharan Africa. Methods: We conducted a scoping review using the 6-stage framework by Arksey and O'Malley across 3 disciplines, including public health, social sciences applied to health, and human-computer interaction research in health care. We searched the following databases: Scopus, PubMed, Google Scholar, ACM Digital Library, IEEE Xplore, Web of Science, and PLOS. A stakeholder consultation was undertaken to inform and validate the review. Results: During the search, 284 peer-reviewed articles were identified. After removing 41 duplicates, 141 articles met our inclusion criteria: 34 from social sciences applied to health, 58 from public health, and 49 from human-computer interaction research in health care. These articles were then tagged (labeled) by 3 researchers using a custom data extraction framework to obtain the findings. First, the scope of digital MCH was found to target health education (eg, breastfeeding and child nutrition), care and follow-up of health service use (to support community health workers), maternal mental health, and nutritional and health outcomes. These interventions included mobile apps, SMS text messaging, voice messaging, web-based applications, social media, movies and videos, and wearable or sensor-based devices. Second, we highlight key challenges: little attention has been given to understanding the lived experiences of the communities; key role players (eg, fathers, grandparents, and other family members) are often excluded; and many studies are designed considering nuclear families that do not represent the family structures of the local cultures. Conclusions: Digital MCH has shown steady growth in Africa and other LMIC settings. Unfortunately, the role of the community was negligible, as these interventions often do not include communities early and inclusively enough in the design process. We highlight key opportunities and sociotechnical challenges for digital MCH in LMIC, such as more affordable mobile data; better access to smartphones and wearable technologies; and the rise of custom-developed, culturally appropriate apps that are more suited to low-literacy users. We also focus on barriers such as an overreliance on text-based communications and the difficulty of MCH research and design to inform and translate into policy.},
-  langid = {english},
-  file = {/Users/dkapitan/Zotero/storage/CVT2D3PV/Till et al. - 2023 - Digital Health Technologies for Maternal and Child Health in Africa and Other Low- and Middle-Income.pdf;/Users/dkapitan/Zotero/storage/WQ99ZEV7/e42161.html}
 }
 
 @article{rosenau2024uncovering,
@@ -2953,4 +2936,197 @@
   doi = {10.1126/science.abn4874},
   urldate = {2024-08-13},
   file = {/Users/dkapitan/Zotero/storage/4N83FKMU/Shabani - 2022 - Will the European Health Data Space change data sh.pdf}
+}
+
+@misc{zegers2023how,
+  type = {Info:Eu-Repo/Semantics/{{bachelorThesis}}},
+  title = {How to Capture Maximum Value through Minimizing Transaction Costs for a Digital {{E-healthcare}} Platform},
+  author = {Zegers, Jelle},
+  year = {2023},
+  publisher = {University of Twente},
+  urldate = {2024-08-13},
+  abstract = {With the increasing pressure on healthcare systems and the growing importance of preventive healthcare, platforms like Samen Kwiek have emerged to connect service providers and users in rural areas, aiming to enhance economic growth and improve citizens' quality of life. To maximize the value generated by the platform and ensure its long-term sustainability, understanding the interplay between platforms, value capture, and transaction costs is crucial. This study is theoretically grounded in the frameworks of platform business models, transaction cost theory, and value capture. The platform business model approach highlights the role of intermediaries in efficiently linking actors in a multi-sided platform, while transaction cost theory explores the costs associated with transacting in markets and strategies to minimize them. The research focuses on three key dimensions of transaction cost theory: transaction frequency, asset specificity, and uncertainty. Transaction frequency examines the frequency of exchanges between actors on the platform, while asset specificity explores the level of investment customization for specific transactions. Uncertainty assesses the extent to which information sharing and detailed service information reduce information asymmetry among participants. These dimensions have been measured before and after the connection to the Samen Kwiek platform, providing insights into the changes in transaction frequency, asset specificity, and uncertainty resulting from the platform's implementation. The study contributes to the existing literature on collaborative business modeling, value capture, and transaction cost analysis, offering practical recommendations to optimize value capture and minimize transaction costs for Samen Kwiek and similar platforms. The findings are relevant for platform developers, service providers, and policymakers in the domain of preventive healthcare. In summary, this study sheds light on the factors influencing value capture and transaction costs in a platform-based ecosystem, providing valuable insights for stakeholders involved in the design, implementation, and management of digital platforms in the context of preventive healthcare.},
+  howpublished = {https://essay.utwente.nl/95341/},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/Y2YKQ8JB/Zegers - 2023 - How to capture maximum value through minimizing tr.pdf;/Users/dkapitan/Zotero/storage/SM9IAZZ5/95341.html}
+}
+
+@misc{designinga,
+  title = {Designing and {{Evaluating Control Mechanisms}} for {{Sovereign Data Sharing}} through a {{Meta-Platform}} for {{Data Marketplaces}} {\textbar} {{TU Delft Repository}}},
+  urldate = {2024-08-14},
+  howpublished = {https://repository.tudelft.nl/record/uuid:3bc77a9e-7912-4b79-9e86-d0cc3c526785},
+  file = {/Users/dkapitan/Zotero/storage/HRK82E2I/uuid3bc77a9e-7912-4b79-9e86-d0cc3c526785.html}
+}
+
+@article{cordes2024competing,
+  title = {Competing Interests: Digital Health and Indigenous Data Sovereignty},
+  shorttitle = {Competing Interests},
+  author = {Cordes, Ashley and Bak, Marieke and Lyndon, Mataroria and Hudson, Maui and Fiske, Amelia and Celi, Leo Anthony and McLennan, Stuart},
+  year = {2024},
+  month = jul,
+  journal = {npj Digital Medicine},
+  volume = {7},
+  number = {1},
+  pages = {1--5},
+  publisher = {Nature Publishing Group},
+  issn = {2398-6352},
+  doi = {10.1038/s41746-024-01171-z},
+  urldate = {2024-08-16},
+  abstract = {Digital health is increasingly promoting open health data. Although this open approach promises a number of benefits, it also leads to tensions with Indigenous data sovereignty movements led by Indigenous peoples around the world who are asserting control over the use of health data as a part of self-determination. Digital health has a role in improving access to services and delivering improved health outcomes for Indigenous communities. However, we argue that in order to be effective and ethical, it is essential that the field engages more with Indigenous peoples{\textasciiacute} rights and interests. We discuss challenges and possible improvements for data acquisition, management, analysis, and integration as they pertain to the health of Indigenous communities around the world.},
+  copyright = {2024 The Author(s)},
+  langid = {english},
+  keywords = {Health policy,Medical research},
+  file = {/Users/dkapitan/Zotero/storage/29GEZYK4/Cordes et al. - 2024 - Competing interests digital health and indigenous.pdf}
+}
+
+@article{janssen2024taxonomy,
+  title = {A {{Taxonomy}} for {{Health Information Systems}}},
+  author = {Janssen, Anna and Donnelly, Candice and Shaw, Tim},
+  year = {2024},
+  month = may,
+  journal = {Journal of Medical Internet Research},
+  volume = {26},
+  pages = {e47682},
+  issn = {1438-8871},
+  doi = {10.2196/47682},
+  urldate = {2024-08-16},
+  abstract = {The health sector is highly digitized, which is enabling the collection of vast quantities of electronic data about health and well-being. These data are collected by a diverse array of information and communication technologies, including systems used by health care organizations, consumer and community sources such as information collected on the web, and passively collected data from technologies such as wearables and devices. Understanding the breadth of IT that collect these data and how it can be actioned is a challenge for the significant portion of the digital health workforce that interact with health data as part of their duties but are not for informatics experts. This viewpoint aims to present a taxonomy categorizing common information and communication technologies that collect electronic data. An initial classification of key information systems collecting electronic health data was undertaken via a rapid review of the literature. Subsequently, a purposeful search of the scholarly and gray literature was undertaken to extract key information about the systems within each category to generate definitions of the systems and describe the strengths and limitations of these systems.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/2EDC4W8C/Janssen et al. - 2024 - A Taxonomy for Health Information Systems.pdf}
+}
+
+@article{prainsack2019loggeda,
+  title = {Logged out: {{Ownership}}, Exclusion and Public Value in the Digital Data and Information Commons},
+  shorttitle = {Logged Out},
+  author = {Prainsack, Barbara},
+  year = {2019},
+  month = jan,
+  journal = {Big Data \& Society},
+  volume = {6},
+  number = {1},
+  pages = {2053951719829773},
+  publisher = {SAGE Publications Ltd},
+  issn = {2053-9517},
+  doi = {10.1177/2053951719829773},
+  urldate = {2024-08-19},
+  abstract = {In recent years, critical scholarship has drawn attention to increasing power differentials between corporations that use data and people whose data is used. A growing number of scholars see digital data and information commons as a way to counteract this asymmetry. In this paper I raise two concerns with this argument: First, because digital data and information can be in more than one place at once, governance models for physical common-pool resources cannot be easily transposed to digital commons. Second, not all data and information commons are suitable to address power differentials. In order to create digital commons that effectively address power asymmetries we must pay more systematic attention to the issue of exclusion from digital data and information commons. Why and how digital data and information commons exclude, and what the consequences of such exclusion are, decide whether commons can change power asymmetries or whether they are more likely to perpetuate them.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/4ILW5EWA/Prainsack - 2019 - Logged out Ownership, exclusion and public value .pdf}
+}
+
+@misc{contexture2023national,
+  title = {National {{Networks}} and {{HIEs}}: {{The Various Crossroads}} of {{Data Exchange}}},
+  shorttitle = {National {{Networks}} and {{HIEs}}},
+  author = {Contexture},
+  year = {2023},
+  month = jan,
+  journal = {Contexture},
+  urldate = {2024-08-20},
+  abstract = {Background~ Contexture, as a health information exchange (HIE), serves a critical role in the overall ecosystem of data exchange and electronic health record (EHR) connectivity. HIEs were born as},
+  langid = {american},
+  file = {/Users/dkapitan/Zotero/storage/3DC4T5DU/national-networks-and-health-information-exchanges-the-various-crossroads-of-data-exchange.html}
+}
+
+@article{holmgren2023health,
+  title = {Health {{Information Exchange}}: {{Understanding}} the {{Policy Landscape}} and {{Future}} of {{Data Interoperability}}},
+  shorttitle = {Health {{Information Exchange}}},
+  author = {Holmgren, A Jay and Esdar, Moritz and H{\"u}sers, Jens and {Coutinho-Almeida}, Jo{\~a}o},
+  year = {2023},
+  month = jul,
+  journal = {Yearbook of Medical Informatics},
+  volume = {32},
+  number = {1},
+  pages = {184--194},
+  issn = {0943-4747},
+  doi = {10.1055/s-0043-1768719},
+  urldate = {2024-08-20},
+  abstract = {Objectives : To review recent literature on health information exchange (HIE), focusing on the policy approach of five case study nations: the United States of America, the United Kingdom, Germany, Israel, and Portugal, as well as synthesize lessons learned across countries and provide recommendations for future research. , Methods : A narrative review of each nation's HIE policy frameworks, current state, and future HIE strategy. , Results : Key themes that emerged include the importance of both central decision-making as well as local innovation, the multiple and complex challenges of broad HIE adoption, and the varying role of HIE across different national health system structures. , Conclusion : HIE is an increasingly important capability and policy priority as electronic health record (EHR) adoption becomes more common and care delivery is increasingly digitized. While all five case study nations have adopted some level of HIE, there are significant differences across their level of data sharing infrastructure and maturity, and each nation took a different policy approach. While identifying generalizable strategies across disparate international systems is challenging, there are several common themes across successful HIE policy frameworks, such as the importance of central government prioritization of data sharing. Finally, we make several recommendations for future research to expand the breadth and depth of the literature on HIE and guide future decision-making by policymakers and practitioners.},
+  pmcid = {PMC10751121},
+  pmid = {37414031},
+  file = {/Users/dkapitan/Zotero/storage/AB88CDYP/Holmgren et al. - 2023 - Health Information Exchange Understanding the Policy Landscape and Future of Data Interoperability.pdf}
+}
+
+@article{torab-miandoab2023interoperability,
+  title = {Interoperability of Heterogeneous Health Information Systems: A Systematic Literature Review},
+  shorttitle = {Interoperability of Heterogeneous Health Information Systems},
+  author = {{Torab-Miandoab}, Amir and {Samad-Soltani}, Taha and Jodati, Ahmadreza and {Rezaei-Hachesu}, Peyman},
+  year = {2023},
+  month = jan,
+  journal = {BMC Medical Informatics and Decision Making},
+  volume = {23},
+  pages = {18},
+  issn = {1472-6947},
+  doi = {10.1186/s12911-023-02115-5},
+  urldate = {2024-08-20},
+  abstract = {Background The lack of interoperability between health information systems reduces the quality of care provided to patients and wastes resources. Accordingly, there is an urgent need to develop integration mechanisms among the various health information systems. The aim of this review was to investigate the interoperability requirements for heterogeneous health information systems and to summarize and present them. Methods In accordance with the PRISMA guideline, a broad electronic search of all literature was conducted on the topic through six databases, including PubMed, Web of science, Scopus, MEDLINE, Cochrane Library and Embase to 25 July 2022. The inclusion criteria were to select English-written articles available in full text with the closest objectives. 36 articles were selected for further analysis. Results Interoperability has been raised in the field of health information systems from 2003 and now it is one of the topics of interest to researchers. The projects done in this field are mostly in the national scope and to achieve the electronic health record. HL7 FHIR, CDA, HIPAA and SNOMED-CT, SOA, RIM, XML, API, JAVA and SQL are among the most important requirements for implementing interoperability. In order to guarantee the concept of data exchange, semantic interaction is the best choice because the systems can recognize and process semantically similar information homogeneously. Conclusions The health industry has become more complex and has new needs. Interoperability meets this needs by communicating between the output and input of processor systems and making easier to access the data in the required formats. Supplementary Information The online version contains supplementary material available at 10.1186/s12911-023-02115-5.},
+  pmcid = {PMC9875417},
+  pmid = {36694161},
+  file = {/Users/dkapitan/Zotero/storage/EFKGRWHM/Torab-Miandoab et al. - 2023 - Interoperability of heterogeneous health information systems a systematic literature review.pdf}
+}
+
+@misc{projects,
+  title = {Projects {\textbar} {{Digital Impact Exchange}}},
+  urldate = {2024-08-20},
+  abstract = {List of key projects provided by the Digital Impact Exchange, to support users in the deployment of digital technologies designed to address the Sustainable Development Goals (SDGs).},
+  howpublished = {https://exchange.dial.global/projects/dominica-integrated-information-systems-for-health-diish},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/TLPV6XQG/dominica-integrated-information-systems-for-health-diish.html}
+}
+
+@article{adler-milstein2021survey,
+  title = {A {{Survey Of Health Information Exchange Organizations In Advance Of A Nationwide Connectivity Framework}}},
+  author = {{Adler-Milstein}, Julia and Garg, Anjali and Zhao, Wendi and Patel, Vaishali},
+  year = {2021},
+  month = may,
+  journal = {Health Affairs},
+  volume = {40},
+  number = {5},
+  pages = {736--744},
+  publisher = {Health Affairs},
+  issn = {0278-2715},
+  doi = {10.1377/hlthaff.2020.01497},
+  urldate = {2024-08-20},
+  abstract = {After more than a decade of investment in electronic health information exchange (HIE), the Office of the National Coordinator for Health Information Technology is advancing a national framework---the Trusted Exchange Framework and Common Agreement---to connect islands of electronic data sharing. This national framework creates new potential opportunities and challenges for state and local health information organizations (HIOs). We undertook our sixth national HIO survey to assess the current state of HIOs and to newly examine anticipated responses to the Trusted Exchange Framework and Common Agreement. We identified eighty-nine operational HIOs, down from 106 in 2014. Although more than half of HIOs struggled with financial viability and competition from health information technology vendor--based HIE networks, many are large in scale, offer a breadth of services to diverse participants, and engage in network-to-network connectivity. Looking ahead, 56~percent of HIOs planned to participate in the Trusted Exchange Framework and Common Agreement, and 41~percent were unsure. As the Trusted Exchange Framework and Common Agreement advances basic network-to-network connectivity, HIOs that have experience with such connectivity while also offering value-added services will be well positioned for sustainability and growth.},
+  file = {/Users/dkapitan/Zotero/storage/M4FGXBNQ/Adler-Milstein et al. - 2021 - A Survey Of Health Information Exchange Organizati.pdf}
+}
+
+@misc{ihe,
+  title = {{{IHE Publications}}},
+  urldate = {2024-08-20},
+  howpublished = {https://profiles.ihe.net/index.html}
+}
+
+@article{sigvartsenimplementation,
+  title = {Implementation Guide for {{Norwegian}} Usage of {{IHE XDS}}, {{XCA}} and {{XUA}}},
+  author = {Sigvartsen, Roy},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/FELZ7XJL/Sigvartsen - Implementation guide for Norwegian usage of IHE XD.pdf}
+}
+
+@misc{2023healthcare,
+  title = {Healthcare {{Exchange Standards}}: {{Transitioning Federated HIE}} from {{XCA}} to {{FHIR Query}}},
+  shorttitle = {Healthcare {{Exchange Standards}}},
+  year = {2023},
+  month = mar,
+  journal = {Healthcare Exchange Standards},
+  urldate = {2024-08-20},
+  file = {/Users/dkapitan/Zotero/storage/9NIHVKGS/transitioning-federated-hie-from-xca-to.html}
+}
+
+@article{till2023digital,
+  title = {Digital {{Health Technologies}} for {{Maternal}} and {{Child Health}} in {{Africa}} and {{Other Low-}} and {{Middle-Income Countries}}: {{Cross-disciplinary Scoping Review With Stakeholder Consultation}}},
+  shorttitle = {Digital {{Health Technologies}} for {{Maternal}} and {{Child Health}} in {{Africa}} and {{Other Low-}} and {{Middle-Income Countries}}},
+  author = {Till, Sarina and Mkhize, Mirriam and Farao, Jaydon and Shandu, Londiwe Deborah and Muthelo, Livhuwani and Coleman, Toshka Lauren and Mbombi, Masenyani and Bopape, Mamara and Klingberg, Sonja and van Heerden, Alastair and Mothiba, Tebogo and Densmore, Melissa and Dias, Nervo Xavier Verdezoto and Network, CoMaCH},
+  year = {2023},
+  month = apr,
+  journal = {Journal of Medical Internet Research},
+  volume = {25},
+  number = {1},
+  pages = {e42161},
+  publisher = {JMIR Publications Inc., Toronto, Canada},
+  doi = {10.2196/42161},
+  urldate = {2024-08-22},
+  abstract = {Background: Maternal and child health (MCH) is a global health concern, especially impacting low- and middle-income countries (LMIC). Digital health technologies are creating opportunities to address the social determinants of MCH by facilitating access to information and providing other forms of support throughout the maternity journey. Previous reviews in different disciplines have synthesized digital health intervention outcomes in LMIC. However, contributions in this space are scattered across publications in different disciplines and lack coherence in what digital MCH means across fields. Objective: This cross-disciplinary scoping review synthesized the existing published literature in 3 major disciplines on the use of digital health interventions for MCH in LMIC, with a particular focus on sub-Saharan Africa. Methods: We conducted a scoping review using the 6-stage framework by Arksey and O'Malley across 3 disciplines, including public health, social sciences applied to health, and human-computer interaction research in health care. We searched the following databases: Scopus, PubMed, Google Scholar, ACM Digital Library, IEEE Xplore, Web of Science, and PLOS. A stakeholder consultation was undertaken to inform and validate the review. Results: During the search, 284 peer-reviewed articles were identified. After removing 41 duplicates, 141 articles met our inclusion criteria: 34 from social sciences applied to health, 58 from public health, and 49 from human-computer interaction research in health care. These articles were then tagged (labeled) by 3 researchers using a custom data extraction framework to obtain the findings. First, the scope of digital MCH was found to target health education (eg, breastfeeding and child nutrition), care and follow-up of health service use (to support community health workers), maternal mental health, and nutritional and health outcomes. These interventions included mobile apps, SMS text messaging, voice messaging, web-based applications, social media, movies and videos, and wearable or sensor-based devices. Second, we highlight key challenges: little attention has been given to understanding the lived experiences of the communities; key role players (eg, fathers, grandparents, and other family members) are often excluded; and many studies are designed considering nuclear families that do not represent the family structures of the local cultures. Conclusions: Digital MCH has shown steady growth in Africa and other LMIC settings. Unfortunately, the role of the community was negligible, as these interventions often do not include communities early and inclusively enough in the design process. We highlight key opportunities and sociotechnical challenges for digital MCH in LMIC, such as more affordable mobile data; better access to smartphones and wearable technologies; and the rise of custom-developed, culturally appropriate apps that are more suited to low-literacy users. We also focus on barriers such as an overreliance on text-based communications and the difficulty of MCH research and design to inform and translate into policy.},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/NL6RYLLC/Till et al. - 2023 - Digital Health Technologies for Maternal and Child.pdf;/Users/dkapitan/Zotero/storage/WS7432TR/e42161.html}
 }
